Adjusted font size and added an underline on email link on contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -33,8 +33,8 @@
       </div>
       <div class="contact-me">
       <p>
-        You can contact Steve Balcourt at his email address <a href=mailto:steve@stevebalcourtphoto.com?subject="subject text">steve@stevebalcourtphoto.com</a>
-        . He will answer all requests on a timely
+        You can contact Steve Balcourt at his email address <a href=mailto:steve@stevebalcourtphoto.com?subject="subject text">steve@stevebalcourtphoto.com</a>.
+        He will answer all requests on a timely
         basis.
       </p>
     </div>
