Added customers fathers name in bio on home screen per request

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h1>About Me</h1>
         <p class="p-1">
           Born in 1949 in Brooklyn, New York, I received early exposure to art
-          and artists through my father who had a studio in Manhattan, and was a
+          and artists through my father (Edward Balcourt) who had a studio in Manhattan, and was a
           photo-realist painter and illustrator of book covers and movie
           posters<span style="font-family: Arial, Helvetica, sans-serif"
             >.</span
